# advent-of-code

./: CMakeLists.txt  Makefile  aoc_stdin.cpp
2025/1/: part1.cpp  part2.cpp
2025/10/: part1.cpp
2025/11/: part1.cpp
2025/2/: part1.cpp  part2.cpp
2025/3/: part1.cpp  part2.cpp
2025/4/: part1.cpp  part2.cpp
2025/5/: part1.cpp  part2.cpp
2025/6/: part1.cpp  part2.cpp
2025/7/: part1.cpp  part2.cpp
2025/8/: part1.cpp  part2.cpp  unionfind.hpp
2025/9/: part1.cpp
